finish google images template

--- a/search/images.html
+++ b/search/images.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Google</title>
+        <title>Google Images</title>
         <link rel="stylesheet" href="/style.css" type="text/css">
         <link rel="icon" href="/images/google-logo.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,7 @@
             </div>
             <div class="top-nav-second-child">
                 <p><a href="#"></a>Gmail</p>
-                <p><a href="./images.html">Images</a></p>
+                <p><a href="./index.html">Search</a></p>
                 <p><a href="./advanced.html">Advanced</a></p>
                 <i class="gg-menu-grid-o"></i>
                 <p class="log-sign-in"><a href="#"></a>Sign In</p>
@@ -23,6 +23,7 @@
         </div>
         <div class="container-logo">
             <img src="/images/logo-google.svg" alt="logo">
+            <p>images</p>
         </div>
         <form action="https://google.com/search">
             <i class="gg-search"></i>
