--- a/search/images.html
+++ b/search/images.html
@@ -28,13 +28,15 @@
             <p>images</p>
         </div>
         <form action="https://google.com/search">
-            <i class="gg-search"></i>
-            <input type="text" name="q">
+            <div class="search-container">
+                <i class="gg-search"></i>
+                <input type="hidden" name="tbm" value="isch">
+                <input type="text" name="q">
+            </div>
+            <div class="button">
+                <input type="submit" name="btnK" role="button" value="Google Image Search">
+            </div>
         </form>
-        <div class="button">
-            <input type="submit" value="Google Search">
-            <input type="submit" value="I'm feeling lucky">
-        </div>
         <div class="bottom-nav">
             <div class="bottom-nav-first-child">
                 <p><a href="#"></a>Advertising</p>
