--- a/search/index.html
+++ b/search/index.html
@@ -27,13 +27,15 @@
             <img src="/images/logo-google.svg" alt="logo">
         </div>
         <form action="https://google.com/search">
-            <i class="gg-search"></i>
-            <input type="text" name="q">
+            <div class="search-container">
+                <i class="gg-search"></i>
+                <input type="text" name="q">
+            </div>
+            <div class="button">
+                <input type="submit" name="btnK" role="button" value="Google Search">
+                <input type="submit" name="btnI" value="I'm feeling lucky">
+            </div>
         </form>
-        <div class="button">
-            <input type="submit" value="Google Search">
-            <input type="submit" value="I'm feeling lucky">
-        </div>
         <div class="bottom-nav">
             <div class="bottom-nav-first-child">
                 <p><a href="#"></a>Advertising</p>
